--- a/WcfDecryptorService/app.config
+++ b/WcfDecryptorService/app.config
@@ -1,74 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.diagnostics>
-        <sources>
-            <source name="System.ServiceModel.MessageLogging" switchValue="Warning,ActivityTracing">
-                <listeners>
-                    <add type="System.Diagnostics.DefaultTraceListener" name="Default">
-                        <filter type="" />
-                    </add>
-                    <add name="ServiceModelMessageLoggingListener">
-                        <filter type="" />
-                    </add>
-                </listeners>
-            </source>
-            <source propagateActivity="true" name="System.ServiceModel" switchValue="Warning,ActivityTracing">
-                <listeners>
-                    <add type="System.Diagnostics.DefaultTraceListener" name="Default">
-                        <filter type="" />
-                    </add>
-                    <add name="ServiceModelTraceListener">
-                        <filter type="" />
-                    </add>
-                </listeners>
-            </source>
-        </sources>
-        <sharedListeners>
-            <add initializeData="C:\Users\Maximilien\source\repos\NetPlateformV3\WcfDecryptorService\App_messages.svclog"
-                type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-                name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
-                <filter type="" />
-            </add>
-            <add initializeData="C:\Users\Maximilien\source\repos\NetPlateformV3\WcfDecryptorService\App_tracelog.svclog"
-                type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-                name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
-                <filter type="" />
-            </add>
-        </sharedListeners>
-    </system.diagnostics>
-    <system.serviceModel>
-        <behaviors>
-            <serviceBehaviors>
-                <behavior name="BehaviorMeta">
-                    <serviceMetadata />
-                </behavior>
-            </serviceBehaviors>
-        </behaviors>
-        <bindings>
-            <netTcpBinding>
-                <binding name="netTcpWcfDecryptor" maxBufferPoolSize="2147483647"
-                    maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-                    <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
-                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
-                    <security mode="Message">
-                        <transport clientCredentialType="None" protectionLevel="None" />
-                        <message algorithmSuite="Basic128" />
-                    </security>
-                </binding>
-            </netTcpBinding>
-        </bindings>
-        <diagnostics>
-            <messageLogging logMalformedMessages="true" logMessagesAtTransportLevel="true" />
-        </diagnostics>
-        <services>
-            <service behaviorConfiguration="BehaviorMeta" name="WcfDecryptorService.DecryptorService">
-                <endpoint address="net.tcp://localhost:5052/IDecryptorService"
-                    binding="netTcpBinding" bindingConfiguration="" name="WcfDecryptorService"
-                    contract="WcfDecryptorService.IDecryptorService" />
-                <endpoint address="net.tcp://localhost:5053/IDecryptorService"
-                    binding="mexTcpBinding" bindingConfiguration="" name="mexWcfDecryptorService"
-                    contract="IMetadataExchange" />
-            </service>
-        </services>
-    </system.serviceModel>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Warning,ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelMessageLoggingListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+      <source propagateActivity="true" name="System.ServiceModel" switchValue="Warning,ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelTraceListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add initializeData="C:\Users\Maximilien\source\repos\NetPlateformV3\WcfDecryptorService\App_messages.svclog"
+          type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+      <add initializeData="C:\Users\Maximilien\source\repos\NetPlateformV3\WcfDecryptorService\App_tracelog.svclog"
+          type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+    </sharedListeners>
+  </system.diagnostics>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="BehaviorMeta">
+          <serviceMetadata />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTcpWcfDecryptor" 
+                 maxBufferPoolSize="2147483647"
+                 maxBufferSize="2147483647" 
+                 maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" 
+                        maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647" 
+                        maxBytesPerRead="2147483647" 
+                        maxNameTableCharCount="2147483647" />
+          <security mode="Message">
+            <transport clientCredentialType="None" protectionLevel="None" />
+            <message algorithmSuite="Basic128" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <diagnostics>
+      <messageLogging logMalformedMessages="true" logMessagesAtTransportLevel="true" />
+    </diagnostics>
+    <services>
+      <service behaviorConfiguration="BehaviorMeta" name="WcfDecryptorService.DecryptorService">
+        <endpoint address="net.tcp://localhost:5052/IDecryptorService"
+            binding="netTcpBinding" bindingConfiguration="" name="WcfDecryptorService"
+            contract="WcfDecryptorService.IDecryptorService" />
+        <endpoint address="net.tcp://localhost:5053/IDecryptorService"
+            binding="mexTcpBinding" bindingConfiguration="" name="mexWcfDecryptorService"
+            contract="IMetadataExchange" />
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
